@@ -3,6 +3,7 @@ package me.marin.lockout.mixin.server;
 import me.marin.lockout.CompassItemHandler;
 import me.marin.lockout.Lockout;
 import me.marin.lockout.server.LockoutServer;
+import net.minecraft.entity.ItemEntity;
 import net.minecraft.entity.damage.DamageSource;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.ItemStack;
@@ -11,9 +12,25 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 @Mixin(ServerPlayerEntity.class)
 public class ServerPlayerEntityMixin {
+
+    @Inject(method = "dropItem(Lnet/minecraft/item/ItemStack;ZZ)Lnet/minecraft/entity/ItemEntity;", at = @At("HEAD"), cancellable = true)
+    public void onDropItem(ItemStack stack, boolean throwRandomly, boolean retainOwnership, CallbackInfoReturnable<ItemEntity> cir) {
+        PlayerEntity player = (PlayerEntity) (Object) this;
+        if (player.getWorld().isClient) return;
+
+        Lockout lockout = LockoutServer.lockout;
+        if (!Lockout.isLockoutRunning(lockout)) return;
+        if (!lockout.isLockoutPlayer(player)) return;
+
+        if (CompassItemHandler.isCompass(stack)) {
+            cir.setReturnValue(null);
+            player.getInventory().insertStack(stack);
+        }
+    }
 
     @Inject(method = "onDeath", at = @At("HEAD"))
     public void onDeath(DamageSource damageSource, CallbackInfo ci) {
@@ -26,14 +43,14 @@ public class ServerPlayerEntityMixin {
         int i = 0;
         for (ItemStack item : player.getInventory().main) {
             if (CompassItemHandler.isCompass(item)) {
-                break;
+                LockoutServer.compassHandler.compassSlots.put(player.getUuid(), i);
+                return;
             }
             i++;
         }
-        if (CompassItemHandler.isCompass(player.getInventory().offHand.get(0))) {
-            i = 40;
+        if (CompassItemHandler.isCompass(player.getInventory().offHand.getFirst())) {
+            LockoutServer.compassHandler.compassSlots.put(player.getUuid(), 40);
         }
-        LockoutServer.compassHandler.compassSlots.put(player.getUuid(), i);
     }
 
 }
